# model_context_protocol

./: .gitignore  clear_cache.ps1  find_launched_mcpserver.ps1  find_server_pid.ps1  model_context_protocol.pyproj  model_context_protocol.sln  pyproject.toml  youtube_text_output.json  youtube_text_output.raw  youtube_text_output.txt
Reference/: find_youtubes_without_transcripts.py  load_module_from_path.py  mcp_prompt_example.py  subproc_cmdgen.py
src/: debug_stub.py  model_context_protocol.py  subproc_cmdgen.py  yt_mcp.py
src/modules/: dirTree.txt
src/modules/mcp_clients/: __init__.py  ai_prompt.py  universal_client.py  youtube_demo.py
src/modules/mcp_servers/: __init__.py  demo_server.py  loader.py  long_job_server.py  registry.py
src/modules/mcp_servers/data/: countries.json
src/modules/mcp_servers/prompts/: summarize.md
src/modules/mcp_servers/resources/: countries.resource.json
src/modules/mcp_servers/tools/: math_tools.py
src/modules/prompts/: mcp_prompt_example.py  prompt_functions.py  summarize.md  yt_prompts.py
src/modules/tools/: basketball_tool.py  long_job_tools.py  math_tools.py  youtube_audio_transcript.py  youtube_search.py  youtube_to_text.py  youtube_transcript.py
src/modules/utils/: api_keys.py  ffmpeg_bootstrap.py  get_icons.py  job_client_mixin.py  jobs.py  log_utils.py  logging_config.py  long_tool_loader.py  paths.py  prompt_loader.py  prompt_md_loader.py  prompt_mod_loader.py  resource_loader.py  tokens.py  tool_loader.py  youtube_ids.py
