[project]
name = "model-context-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.2",
    "openai-whisper>=20250625",
    "pylint>=4.0.2",
    "python-frontmatter>=1.1.0",
    "youtube-search-python>=1.6.6",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.10.22",
]
